update editable value from bottom to 1

--- a/view/allocation_tree.xml
+++ b/view/allocation_tree.xml
@@ -3,6 +3,6 @@
         <field name="role"/>
     </xpath>
     <xpath expr="/tree" position="replace_attributes">
-        <tree editable="bottom"/>
+        <tree editable="1"/>
     </xpath>
 </data>
