--- a/view/work_status_form.xml
+++ b/view/work_status_form.xml
@@ -1,5 +1,8 @@
+<?xml version="1.0"?>
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
 <data>
-    <xpath expr="//field[@name='sequence']" position="after">
+    <xpath expr="//field[@name='types']" position="after">
         <label name="role"/>
         <field name="role"/>
     </xpath>
